--- a/sic-ear/pom.xml
+++ b/sic-ear/pom.xml
@@ -29,6 +29,11 @@
 			<version>${project.version}</version>
 			<type>war</type>
 		</dependency>
+	 <dependency>
+	  <groupId>${project.groupId}</groupId>
+	  <artifactId>ext-commons</artifactId>
+	  <version>0.1.1-SNAPSHOT</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
