--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
     <module>sic-ear</module>
     <module>qq-web</module>
     <module>storage-web</module>
+    <module>storage-ejb</module>
   </modules>
 </project>
